# OhMyTable

./: .gitignore  README.md  gradio_demo.py  pyproject.toml
ohmytable/: __init__.py  callback.py  consts.py  matcher.py  pipeline.py  utils.py
ohmytable/ocr/: __init__.py  base_ocr.py  ocr.py  predict_det.py  predict_rec.py
ohmytable/ocr/data/: __init__.py  operators.py
ohmytable/ocr/modeling/: common.py
ohmytable/ocr/modeling/architectures/: base_model.py
ohmytable/ocr/modeling/backbones/: __init__.py  det_mobilenet_v3.py  rec_hgnet.py  rec_lcnetv3.py  rec_mobilenet_v3.py  rec_svtrnet.py
ohmytable/ocr/modeling/heads/: __init__.py  det_db_head.py  rec_att_head.py  rec_ctc_head.py  rec_multi_head.py
ohmytable/ocr/modeling/necks/: __init__.py  db_fpn.py  fpn.py  intracl.py  rnn.py
ohmytable/ocr/postprocess/: __init__.py  db_postprocess.py  rec_postprocess.py
ohmytable/table_detect/: __init__.py  table_detect.py
ohmytable/table_structure/: __init__.py  components.py  encoderdecoder.py  gpt_fast_decoder.py  table_structure.py  utils.py
tests/: .gitignore  test_all.py
